--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "dependencies": {
     "yeoman-generator": "^0.23.0",
     "chalk": "^1.0.0",
-    "yosay": "^1.0.0"
+    "yosay": "^1.0.0",
+    "rimraf": "^2.5.4"
   },
   "devDependencies": {
     "eslint": "^3.1.1",
@@ -41,7 +42,6 @@
     "gulp-mocha": "^3.0.1",
     "gulp-nsp": "^2.1.0",
     "gulp-plumber": "^1.0.0",
-    "rimraf": "^2.5.4",
     "yeoman-assert": "^2.0.0",
     "yeoman-test": "^1.0.0"
   },
